# slint-esp-workshop

./: .gitignore  Cargo.toml  README.md  bindings.h  build.rs  espflash.toml  partitions.csv  sdkconfig.defaults  slint-workshop-final.7z
android/: Cargo.toml  README.md  build.rs  env.sh  lib.rs
common/: Cargo.toml
common/src/: lib.rs  sensor.rs
common/src/weather/: dummydataprovider.rs  dummyweather.json  dummyweathercontroller.rs  mod.rs  openweathercontroller.rs  weathercontroller.rs
esp32/: Cargo.toml  appwindow.slint  bindings.h  build.rs  espflash.toml  partitions.csv
esp32-no_std/esope-sld-c-w-s3/ui/: style.slint
esp32-no_std/esp32-s3-box-3/: appwindow.slint  build.rs
esp32-no_std/esp32-s3-box-3/src/: main.rs
esp32-no_std/esp32-s3-lcd-ev-board/: Cargo.toml
esp32-no_std/m5stack-cores3/: Cargo.toml  appwindow.slint  build.rs  diagram.json
esp32-no_std/m5stack-cores3/.cargo/: config.toml
esp32-no_std/m5stack-cores3/src/: app.rs  dht22.rs  display.rs  init.rs  main.rs  ui.rs  wifi.rs
esp32-no_std/m5stack-cores3/ui/: mainwindow.slint  pages.slint  style.slint  viewmodel.slint  widgets.slint  wifi_list.slint
esp32-std/esope-sld-c-w-s3/: Cargo.toml  bindings.h  build.rs  sdkconfig.defaults
esp32-std/esope-sld-c-w-s3/src/: esp32.rs
esp32/.cargo/: config.toml
esp32/no_std/esope-sld-c-w-s3/: Cargo.toml  build.rs  partitions.csv
esp32/no_std/esope-sld-c-w-s3/.cargo/: config.toml
esp32/no_std/esope-sld-c-w-s3/ui/: widgets.slint
esp32/no_std/esp32-s3-box-3/: Cargo.toml  rust-toolchain.toml
esp32/no_std/esp32-s3-box-3/src/: display.rs  main.rs  touch.rs
esp32/no_std/esp32-s3-lcd-ev-board/.cargo/: config.toml
esp32/no_std/esp32-s3-lcd-ev-board/src/: main.rs
esp32/no_std/m5stack-cores3/: Cargo.toml  partitions.csv  wokwi.toml
esp32/no_std/m5stack-cores3/src/: main.rs  touch.rs
esp32/src/: dht22.rs  display.rs  esp32.rs  http.rs  main.rs  wifi.rs  wifi_manager.rs
model/: Cargo.toml
model/src/: lib.rs
src/: dht22.rs  esp32.rs  main.rs
ui/: appwindow.esp.slint  appwindow.slint  appwindow.wasm.slint  datatypes.slint  logic.slint  pages.slint  style.slint  theme.slint  widgets.slint
wasm/: Cargo.toml  README.md  appwindow.slint  build.rs  index.html  lib.rs
winit/: Cargo.toml  build.rs
winit/src/: main.rs
