[package]
name = "slint-esp-workshop"
version = "0.1.0"
authors = ["Michael Winkelmann <michael@winkelmann.site>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
num-traits = { version = "0.2.16", default-features = false, features = ["libm"], optional = true }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
slint = { version = "1.6.0", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
portable-atomic = { version = "1", features = ["float"] }

[build-dependencies]
embuild = "0.31.3"
slint-build = "1.6.0"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-box-3", version = "1.1.3" }
bindings_header = "bindings.h"
