[package]
name = "slint-workshop-common"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openweather_sdk = { version = "0.1.8", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
weather = ["dep:openweather_sdk", "dep:openssl"]
