[package]
name = "slint-workshop-esp"
version = "0.2.0"
authors = ["Michael Winkelmann <michael@winkelmann.site>"]
edition = "2021"
resolver = "2"
rust-version = "1.80"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "1"
num-traits = { version = "0.2.16", default-features = false, features = [
    "libm",
], optional = true }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51", default-features = false }
slint = { version = "1.10", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }

embedded-svc = { version = "0.28", default-features = false }

portable-atomic = { version = "1", features = ["float"] }

sitronix-touch = { version = "0.0.1" }
eeprom24x = { version = "0.7.2" }
embedded-hal-bus = { version = "0.3.0", features = ["alloc"] }

slint-workshop-common = { path = "../common" }

[build-dependencies]
embuild = "0.33"
slint-build = { version = "1.10", features = ["sdf-fonts"] }

[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "bindings.h"