[package]
name = "slint-workshop-esp"
version = "0.2.0"
authors = ["Michael Winkelmann <michael@winkelmann.site>"]
edition = "2021"
resolver = "2"
rust-version = "1.80"

[features]
# Default board configuration - change this to switch between boards
default = ["esp32-s3-box-3"]

# Board-specific features - use with: cargo build --features <board-name> --no-default-features
esp32-s3-box-3 = ["mcu-board-support/esp32-s3-box-3"]                # ESP32-S3-BOX-3 development board
esope-sld-c-w-s3 = ["mcu-board-support/esope-sld-c-w-s3"]              # ESoPE-SLD-C-W-S3 board with EEPROM
esp32-s3-lcd-ev-board = ["mcu-board-support/esp32-s3-lcd-ev-board"]    # ESP32-S3-LCD-EV-BOARD

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }

slint = { path = "../../slint/api/rs/slint", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }

mcu-board-support = { path = "../../slint/examples/mcu-board-support", default-features = false }
esp-println = { version = "0.13.1", features = ["esp32s3", "log"] }

# Explicitly enable esp32s3 feature for xtensa-lx-rt to resolve version conflict
xtensa-lx-rt = { version = "0.19.0", features = ["esp32s3"] }

# Add dependencies for WiFi functionality (simulation mode)
critical-section = { version = "1.2.0", default-features = false }

[build-dependencies]
slint-build = { path = "../../slint/api/rs/build", features = ["sdf-fonts"] }
