[package]
name = "slint-workshop-esp"
version = "0.2.0"
authors = ["Michael Winkelmann <michael@winkelmann.site>"]
edition = "2024"
rust-version = "1.85"

[features]
# Default board configuration - change this to switch between boards
default = ["esp32-s3-box-3"]

# Board-specific features - using local display implementation
esp32-s3-box-3 = []                # ESP32-S3-BOX-3 development board
esope-sld-c-w-s3 = []              # ESoPE-SLD-C-W-S3 board with EEPROM
esp32-s3-lcd-ev-board = []    # ESP32-S3-LCD-EV-BOARD

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }

slint = { path = "../../slint/api/rs/slint", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }

# mcu-board-support removed - using local display implementation
# Display and touch dependencies
mipidsi = "0.9.0"
embedded-graphics-core = "0.4"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2"
gt911 = "0.3.0"
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }

# Explicitly enable esp32s3 feature for xtensa-lx-rt to resolve version conflict
xtensa-lx-rt = { version = "0.19.0", features = ["esp32s3"] }

# Add dependencies for WiFi functionality (real WiFi scanning)
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
embassy-sync = { version = "0.7.0", default-features = false }
static_cell = "2.1.0"
esp-wifi = { version = "0.15.0", features = ["builtin-scheduler", "esp32s3", "log-04", "wifi"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0-beta.1", features = ["esp32s3", "unstable", "psram"] }
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = ["esp32s3", "exception-handler", "println"] }
heapless = { version = "0.8.0", default-features = false }
embedded-io = "0.6.1"

[build-dependencies]
slint-build = { path = "../../slint/api/rs/build", features = ["sdf-fonts"] }
