[package]
name = "slint-workshop-wasm"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"                                        # Use anyhow for error handling
env_logger = "0.11.3"                               # Use env_logger for logging
chrono = "0.4"                                      # To display the current time
log = { version = "0.4", default-features = false } # Use log for logging

slint = "1.8" # Use the slint library for the UI

# Include the common package as a dependency
#slint-workshop-common = { path = "../common" }

[build-dependencies]
slint-build = "1.8" # To compile slint files into Rust code at compile time


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
web-sys = { version = "0.3", features=["console"] }
console_error_panic_hook = "0.1.5"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]
