[package]
name = "slint-workshop-winit"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = "1.12.0"
env_logger = "0.11.3"
log = { version = "0.4", default-features = false }

slint = "1.8"

slint-workshop-common = { path = "../common", features = ["weather"] }

[build-dependencies]
slint-build = "1.8"
