[package]
name = "slint-workshop-esp-m5stack-cores3"
version = "0.2.0"
authors = ["Michael Winkelmann <michael@winkelmann.site>"]
edition = "2024"
rust-version = "1.85"

[dependencies]
log = { version = "0.4", default-features = false }

slint = { path = "../../../../slint/api/rs/slint", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }

# M5Stack CoreS3 display and power management dependencies
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2"
mipidsi = "0.9.0"
display-interface = "0.5.0"
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }

# Updated to match workshop versions with WiFi support
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
embassy-sync = { version = "0.7.0", default-features = false }
static_cell = "2.1.0"
esp-wifi = { version = "0.15.0", features = ["builtin-scheduler", "esp32s3", "log-04", "wifi"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0-beta.1", features = ["esp32s3", "unstable", "psram"] }
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = ["esp32s3", "exception-handler", "println"] }
heapless = { version = "0.8.0", default-features = false }
embedded-io = "0.6.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[build-dependencies]
slint-build = { path = "../../../../slint/api/rs/build", features = ["sdf-fonts"] }
